--- a/code/bitcoin/01_tweets_cleaning.ipynb
+++ b/code/bitcoin/01_tweets_cleaning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "directory = '~/PycharmProjects/tfm_hugopobil'\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -102,7 +102,7 @@
       "text/plain": "                                  user_name    user_location  \\\n0                             DeSota Wilson      Atlanta, GA   \n1                                  CryptoND              NaN   \n2                                 Tdlmatias  London, England   \n3                      Crypto is the future              NaN   \n4  Alex Kirchmaier 🇦🇹🇸🇪 #FactsSuperspreader           Europa   \n\n                                    user_description         user_created  \\\n0  Biz Consultant, real estate, fintech, startups...  2009-04-26 20:05:09   \n1  😎 BITCOINLIVE is a Dutch platform aimed at inf...  2019-10-17 20:12:10   \n2  IM Academy : The best #forex, #SelfEducation, ...  2014-11-10 10:50:37   \n3  I will post a lot of buying signals for BTC tr...  2019-09-28 16:48:12   \n4  Co-founder @RENJERJerky | Forbes 30Under30 | I...  2016-02-03 13:15:55   \n\n   user_followers user_friends user_favourites user_verified  \\\n0          8534.0         7605            4838         False   \n1          6769.0         1532           25483         False   \n2           128.0          332             924         False   \n3           625.0          129              14         False   \n4          1249.0         1472           10482         False   \n\n                  date                                               text  \\\n0  2021-02-10 23:59:04  Blue Ridge Bank shares halted by NYSE after #b...   \n1  2021-02-10 23:58:48  😎 Today, that's this #Thursday, we will do a \"...   \n2  2021-02-10 23:54:48  Guys evening, I have read this article about B...   \n3  2021-02-10 23:54:33  $BTC A big chance in a billion! Price: \\487264...   \n4  2021-02-10 23:54:06  This network is secured by 9 508 nodes as of t...   \n\n                                    hashtags               source is_retweet  \n0                                ['bitcoin']      Twitter Web App      False  \n1  ['Thursday', 'Btc', 'wallet', 'security']  Twitter for Android      False  \n2                                        NaN      Twitter Web App      False  \n3         ['Bitcoin', 'FX', 'BTC', 'crypto']              dlvr.it      False  \n4                                    ['BTC']      Twitter Web App      False  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>user_name</th>\n      <th>user_location</th>\n      <th>user_description</th>\n      <th>user_created</th>\n      <th>user_followers</th>\n      <th>user_friends</th>\n      <th>user_favourites</th>\n      <th>user_verified</th>\n      <th>date</th>\n      <th>text</th>\n      <th>hashtags</th>\n      <th>source</th>\n      <th>is_retweet</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>DeSota Wilson</td>\n      <td>Atlanta, GA</td>\n      <td>Biz Consultant, real estate, fintech, startups...</td>\n      <td>2009-04-26 20:05:09</td>\n      <td>8534.0</td>\n      <td>7605</td>\n      <td>4838</td>\n      <td>False</td>\n      <td>2021-02-10 23:59:04</td>\n      <td>Blue Ridge Bank shares halted by NYSE after #b...</td>\n      <td>['bitcoin']</td>\n      <td>Twitter Web App</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>CryptoND</td>\n      <td>NaN</td>\n      <td>😎 BITCOINLIVE is a Dutch platform aimed at inf...</td>\n      <td>2019-10-17 20:12:10</td>\n      <td>6769.0</td>\n      <td>1532</td>\n      <td>25483</td>\n      <td>False</td>\n      <td>2021-02-10 23:58:48</td>\n      <td>😎 Today, that's this #Thursday, we will do a \"...</td>\n      <td>['Thursday', 'Btc', 'wallet', 'security']</td>\n      <td>Twitter for Android</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tdlmatias</td>\n      <td>London, England</td>\n      <td>IM Academy : The best #forex, #SelfEducation, ...</td>\n      <td>2014-11-10 10:50:37</td>\n      <td>128.0</td>\n      <td>332</td>\n      <td>924</td>\n      <td>False</td>\n      <td>2021-02-10 23:54:48</td>\n      <td>Guys evening, I have read this article about B...</td>\n      <td>NaN</td>\n      <td>Twitter Web App</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Crypto is the future</td>\n      <td>NaN</td>\n      <td>I will post a lot of buying signals for BTC tr...</td>\n      <td>2019-09-28 16:48:12</td>\n      <td>625.0</td>\n      <td>129</td>\n      <td>14</td>\n      <td>False</td>\n      <td>2021-02-10 23:54:33</td>\n      <td>$BTC A big chance in a billion! Price: \\487264...</td>\n      <td>['Bitcoin', 'FX', 'BTC', 'crypto']</td>\n      <td>dlvr.it</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Alex Kirchmaier 🇦🇹🇸🇪 #FactsSuperspreader</td>\n      <td>Europa</td>\n      <td>Co-founder @RENJERJerky | Forbes 30Under30 | I...</td>\n      <td>2016-02-03 13:15:55</td>\n      <td>1249.0</td>\n      <td>1472</td>\n      <td>10482</td>\n      <td>False</td>\n      <td>2021-02-10 23:54:06</td>\n      <td>This network is secured by 9 508 nodes as of t...</td>\n      <td>['BTC']</td>\n      <td>Twitter Web App</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "Index(['user_name', 'user_location', 'user_description', 'user_created',\n       'user_followers', 'user_friends', 'user_favourites', 'user_verified',\n       'date', 'text', 'hashtags', 'source', 'is_retweet'],\n      dtype='object')"
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "tweets['sample_date'] = tweets['date'].apply(lambda x: x.split(' ', 1)[0])\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "tweets_sample = tweets.groupby('sample_date', group_keys=False).apply(lambda x: x.sample(200))"
@@ -238,13 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "user_name           200\nuser_location       114\nuser_description    186\nuser_created        200\nuser_followers      200\nuser_friends        200\nuser_favourites     200\nuser_verified       200\ndate                200\ntext                200\nhashtags            148\nsource              199\nis_retweet          200\nsample_date         200\ndtype: int64"
+      "text/plain": "user_name           200\nuser_location       117\nuser_description    185\nuser_created        200\nuser_followers      200\nuser_friends        200\nuser_favourites     200\nuser_verified       200\ndate                200\ntext                200\nhashtags            157\nsource              200\nis_retweet          200\nsample_date         200\ndtype: int64"
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,13 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "(23200, 14)"
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,13 +298,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23200/23200 [00:01<00:00, 16561.00it/s]\n"
+      "Since the GPL-licensed package `unidecode` is not installed, using Python's `unicodedata` package which yields worse results.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cleantext import clean"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23200/23200 [00:07<00:00, 2911.49it/s]\n"
      ]
     }
    ],
@@ -324,6 +346,8 @@
     "    text = re.sub(\"#[A-Za-z0-9_]+\",\"\", text)\n",
     "    text = re.sub(r\"http\\S+\", \"\", text)\n",
     "    text = re.sub(r\"www.\\S+\", \"\", text)\n",
+    "    text = re.sub(r'[0-9]', '', text)\n",
+    "    text = clean(text, no_emoji=True)\n",
     "    text = re.sub('[()!?]', ' ', text)\n",
     "    text = re.sub('\\[.*?\\]',' ', text)\n",
     "    text = re.sub(\"[^a-z0-9]\",\" \", text)\n",
@@ -342,13 +366,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23200/23200 [00:02<00:00, 9355.16it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, s in enumerate(tqdm(dd['text'], position=0, leave=True)):\n",
+    "    text = str(dd.loc[i, 'text'])\n",
+    "    text = clean(text, no_emoji=True)\n",
+    "    dd.loc[i, 'text'] = text\n",
+    "\n",
+    "dd.to_csv(f'{directory}/data/sampled_data/tweets_clean_v2.csv', header=True, encoding='utf-8', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "outputs": [
     {
      "data": {
-      "text/plain": "0     perl 0 06  i have insisted that since 0 02 it...\n1      are we talking about bitcoin  sure  17 usd d...\n2      prices update in  usdt  1 hour     btc   376...\n3    dominus and johnewbanks i messed up in my firs...\n4      prices update in  usd  1 hour     btc     37...\n5    hey  the cscalp team recorded a video on how t...\n6    bitcoin can breakout any second     technicala...\n7     for cheap network fees coming next month  in ...\n8    hey guys  i want buy a gaming pc  donate me pl...\n9    surge in bitcoin energy consumption sparks deb...\nName: text, dtype: object"
+      "text/plain": "0                           bitcoin bitcoin btc btcusd\n1       to do or not to do crypto btc bitcoin ethereum\n2    bitcoin btc current price hour hours days btc ...\n3                      node for bitcoin blockchain btc\n4    there may be other currencies like it that may...\n5    flm flm bullish allready profit hold on only m...\n6    stan drunkenmiller shared his views on bitcoin...\n7    follow me on let s hunt for bitcoins together ...\n8    binance pay beta launched read more binance bi...\n9    bitcoin btc current price gbp like my updates ...\nName: text, dtype: object"
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
