--- a/models/net_model_2.ipynb
+++ b/models/net_model_2.ipynb
@@ -24,10 +24,7 @@
     "The variable target in True when the sentiment analysis equals the bitcoin positive increase."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
